2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c (autocrop): crop the image, even if
	the layer is fully opaque. Fixes bug #413906.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c (guess_bgcolor): special case fully
	transparent regions, just as we do in app/core/gimpimage-crop.c.
	Fixes bug #357554.

	* app/core/gimpimage-crop.c: cosmetics.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush-load.c: applied slightly modified patch from
	Eric Lamarque that adds support for loading .abr v2 Photoshop
	brushes (bug #435635).

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin-cleanup.c: removed debug output.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/maze/maze.c: reduced the number of progress updates.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/edge.c: reduced the number of progress updates.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/fractaltrace.c: whoops. fixed progress when
	selections exist.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/fractaltrace.c: reduced the number of progress
	updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/dog.c: reduced the number of progress updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c (gauss_rle): fixed a bug in my last change.
	Also reduced the number of progress updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprogress.c (gimp_progress_update): print a warning
	on stderr if a plug-in updates the progress too frequently.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/ifscompose/ifscompose_utils.c: reduce the number of
	progress updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_progress_message):
	reverted last change, the behavior is different.

2007-05-04  Sven Neumann  <sven@gimp.org>
